--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
 			<h1><a href="/">Angular</a></h1>
 		</div>
 	</header>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12">
-				
+			<div class="col-md-12" ng-controller="testController as tc">
+				<div class="item-wrapper">				
+					<div class="item vector-img" ng-repeat = "imgVector in imgVectors">
+						<p>{{imgVector.name}}</p>
+						<img ng-src="{{imgVector.image}}">
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
